init postOfFriend